MJ 09/06/09
- Fixed a bug in Scheduler found by Alberto. In the event
  based engine if "from" was set, the component was
  executed at "from" irrespective of "until". Besides,
  a negative "step" was not checked for.

AM 07/06/09
- Solved a bug identified by Mark: constant expressions
  were not allowed on RangeSimulator ranges, although they
  were explicitly mentioned in the documentation. The doc
  has been improved as well, saying that variables are not
  allowed inside ranges.
- Changed constants in peersim.rangesime.TaggedOutputStream
  from protected to public; this is needed to use the same
  class in other simulator implementation. Added the @config
  specification, so they appear correctly in the documentation.

AM 31/05/09
- Solved a bug in peersim.edsim.EDSimulator
  ClassCastException generated inside a user Control object
  were caught by the EDSimulator and a misleading error
  message was printed.

AM 30/04/09
- Solved a bug in ConfigContainer.  
  ConfigContainer.getInstance(String name, Object def) was 
  returning the default object even if name was defined but
  a parameter was missing in the definition of the created
  object. Thanks to Marco Biazzini for spotting this.
- Improved the functionality of configuration file parsing
  in peersim.config.ConfigProperties. Now, each of the
  command line parameter is first interpreted as a file
  name, and if this file does not exist, it is set as
  a configuration property. This allows the configuration 
  to be split in multiple files.
  Thanks to Jordi Pujol for suggesting the idea and
  implementing a first version of it.  

AM 8/11/2008
VERSION 1.0.4 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

AM 8/10/08
- Modified EDSimulator to print additional information in case
  of protocols not implementing a particular interface. Class cast
  exceptions launched by event processing are not swallowed any